objects/InsuranceCompany__c.object
<CustomObject>
    <fields>
        <fullName>InsuranceCompanyLogoFileName__c</fullName>
        <label>InsuranceCompanyLogoFileName</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_City__c</fullName>
        <label>Insurance Company City</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Full_Address__c</fullName>
        <formula>Insurance_Company_Street_Number__c + &quot; &quot; + TEXT(Insurance_Company_Street_Direction__c) + &quot; &quot; + Insurance_Company_Street_Name__c + &quot;, &quot; + Insurance_Company_City__c + &quot;, &quot; + TEXT(Insurance_Company_State__c) + &quot; &quot; + Insurance_Company_ZipCode__c</formula>
        <label>Insurance Company Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Name__c</fullName>
        <label>Insurance Company Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Phone_Number__c</fullName>
        <label>Insurance Company Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_State__c</fullName>
        <label>Insurance Company State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Street_Direction__c</fullName>
        <label>Insurance Company Street Direction</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Street_Name__c</fullName>
        <label>Insurance Company Street Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Street_Number__c</fullName>
        <label>Insurance Company Street Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_ZipCode__c</fullName>
        <label>Insurance Company ZipCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>InsuranceCompany</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Full_View_All_Info</fullName>
        <columns>NAME</columns>
        <columns>Insurance_Company_Name__c</columns>
        <columns>InsuranceCompanyLogoFileName__c</columns>
        <columns>Insurance_Company_Full_Address__c</columns>
        <columns>Insurance_Company_Phone_Number__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Full View All Info</label>
    </listViews>
    <nameField>
        <displayFormat>InsureComp-{0000}</displayFormat>
        <label>InsuranceCompany Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InsuranceCompanies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>